Babo | implemented forgot password

--- a/app/app_core/templates/forgotpassword.html
+++ b/app/app_core/templates/forgotpassword.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-<link rel="stylesheet" type="text/css"  href='../../static/css/login.css'/>
-
-	<title>FORGOT PASSWORD</title>
-</head>
-<head>
-    <title>KSC</title>
+<html >
+  <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="/static/slippry/dist/slippry.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-    <link rel="stylesheet" href="/static/css/home_style.css">
-    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-    <script src="/static/sliderengine/jquery.js"></script>
-    <script src="/static/sliderengine/amazingslider.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
-    <script src="/static/sliderengine/initslider-1.js"></script>
+    <title>Login Form</title>
+
+    
+    <link rel="stylesheet" href="static/css/reset.css">
+    <link rel="stylesheet" href="static/css/style.css">
+  <script src="/static/js/prefixfree.min.js"></script>
+
+<link rel="stylesheet" href="/static/css/home_style.css">
+
+
 </head>
 <header>
+
     <div id="langbar" align="right">
         <select>
             <option>Language</option>
@@ -30,33 +23,74 @@
         </select>
     </div>
     <div id="menu" class="clear">
-        <a href="/">
-            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
-        </a>
+        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
         <ul align="center" id="bar">
             <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
+            <li><a href="/upcomingevents">Events</a></li>
             <li><a href="/login">Login</a></li>
-            <li><a href="/register">Registration</a></li>
-        </ul>
-    </div>
+             <li><a href="/register">Registration</a></li>
+        </ul> 
+    </div>    
 </header>
-</div>
-<body>
-<div>
-<P>ENTER YOUR EMAIL ADDRESS AND WE WILL <br>SEND YOU A LINK TO RESET YOUR PASSWORD</br></P>
-<p>
-    <input type="text" name="username" id="username" placeholder="*EMAIL ADDRESS" required autofocus>
-  </p>
-    <p><button>Reset</button><a href="login.html"><button>Cancel</button></p>
-</p></div>
-</body>
-<footer align="center">
-    <div id="wrap">
-    <div id="right">
-    <ul>
+    </div>
+    
+  </head>
+
+  <body>
+  <p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+    <div id="login">
+  <form id="login_form">
+    <div class="field_container">
+      <input type="text" placeholder="Enter Your Registered Email ID">
+    </div>
+    
+      <button id="sign_in_button">
+        <span class="button_text">Submit</span>
+      </button>
+    </div>
+    
+    <div id="sign_in_options" class="field_container">
+        <div id="sign_in_alternatives_container">
+          
+        </div>
+        <!-- <div id="remember_me_container">
+          <input name="user[remember_me]" type="hidden" value="0"><input id="user_remember_me" name="user[remember_me]" type="checkbox" value="1"> -->
+         <!--  <label class="login_link" for="user_remember_me" id="remember_me_label">stay signed in</label>
+        </div>
+        <div class="clearfix"></div>
+      </div> -->
+
+  
+  <!-- <div id="dont_have_an_account">
+    <h2>
+      Need to <a href="/register" class="login_link">sign up</a> for an account
+      or <a href="/reset" id="forgot_password_link" class="login_link">reset</a> your password?
+    </h2>
+  </div>
+</div> -->
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>   
+ </body>
+   <footer align="center">
         <ls>
             <div align="right">
                 <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
@@ -66,9 +100,9 @@
                 <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
                     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
                 </a>
-    </div>
-    <div id="main" align="left">
-    <ls>
+            </div>
+            <div align="justify">
+                <ls>
                     <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
                     </a>
@@ -90,8 +124,7 @@
                         <font size="3"><b>| Privacy Policy </font></a>
                 </ls>&nbsp;
                     &nbsp;
-    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-            </div>
-            </div>
+        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
+        </div>
     </footer>
 </html>
