--- a/app/app_core/templates/register.html
+++ b/app/app_core/templates/register.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
-
 <html>
+
 <head>
-<title>KSC</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="/static/slippry/dist/slippry.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-<link rel="stylesheet" href="/static/css/home_style.css">
-
-<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-<link rel="stylesheet" href="/static/css/home.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-
-
+    <title>KSC</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
     <script src="/static/sliderengine/jquery.js"></script>
     <script src="/static/sliderengine/amazingslider.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
     <script src="/static/sliderengine/initslider-1.js"></script>
-
-
 </head>
 <header>
-
     <div id="langbar" align="right">
         <select>
             <option>Language</option>
@@ -32,29 +25,25 @@
             <option value="French">French</option>
         </select>
     </div>
-
-
-
     <div id="menu" class="clear">
-
-
-
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
-       <ul align="center" id="bar">
+        <a href="/">
+            <div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div>
+        </a>
+        <ul align="center" id="bar">
             <li><a href="/aboutus">About Us</a></li>
             <li><a href="/gallery">Gallery</a></li>
             <li><a href="/forum">Forum</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/login">Login</a></li>
+            <li><a href="/register">Registration</a></li>
         </ul>
-
     </div>
-
-
-    
 </header>
-
-    </div>
+</div>
+<link type="text/css" rel="stylesheet" href="/static/css/register.css" />
+<script type="text/javascript" src="/static/js/register.js"></script>
+<script type="text/javascript" async="" src="https://www.gstatic.com/recaptcha/api2/r20151006130033/recaptcha__en.js"></script>
+</head>
 
 <body onload="document.register.firstname.focus()">
     <form name="register" id="register" method="post" onsubmit="validate()">
@@ -82,22 +71,7 @@
         </div>
         <div>
             <label>Date Of Birth</label>
-            <select name="month" onchange="return wait_for_load(this, event, function() { editor_date_month_change(this, 'birthday_day','birthday_year'); });" required>
-                <option value="na">Month</option>
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6">June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
-            </select>
-            <select name="day" required>
+            <select name="day" required onchange="return wait_for_load(this, event, function() { editor_date_month_change(this, 'birthday_day','birthday_year'); });">
                 <option value="na">Day</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -130,6 +104,21 @@
                 <option value="29">29</option>
                 <option value="30">30</option>
                 <option value="31">31</option>
+            </select>
+            <select name="month" required>
+                <option value="na">Month</option>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
             </select>
             <select name="year" required>
                 <option value="na">Year</option>
@@ -243,7 +232,7 @@
         </div>
         <div>
             <label>Country <span class="required"></span></label>
-            <select name="country">
+            <select name="country" id="country">
                 <option value="">Country</option>
                 <option value="DZ">Algeria</option>
                 <option value="AG">Angola</option>
@@ -347,34 +336,32 @@
 </body>
 <footer align="center">
     <div id="wrap">
-    <div id="right">
-    <ul>
-        <ls>
-            <div align="right">
-                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-                </a>
-                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-                </a>
-    </div>
-    <div id="main" align="left">
-    <ls>
-                    <a id="contactus" href="/contactus">
-                        <font size="3"><b> Contact Us </b></font>
-                    </a>
-                   
-                </ls>&nbsp;
+        <div id="right">
+            <ul>
                 <ls>
-                    <a id="partners" href="/partners">
-                        <font size="3"><b>| Our Partners  </b></font>
-                    </a>
-                    
-                </ls>&nbsp;
-                <ls>
-                    <a id="termscons" href="/termscons">
-                        <font size="3"><b>| Terms&Conditions </font></a>
+                    <div align="right">
+                        <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
+                            <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
+                        </a>
+                        <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
+                        <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
+                            <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
+                        </a>
+                    </div>
+                    <div id="main" align="left">
+                        <ls>
+                            <a id="contactus" href="/contactus">
+                                <font size="3"><b> Contact Us </b></font>
+                            </a>
+                        </ls>&nbsp;
+                        <ls>
+                            <a id="partners" href="/partners">
+                                <font size="3"><b>| Our Partners  </b></font>
+                            </a>
+                        </ls>&nbsp;
+                        <ls>
+                            <a id="termscons" href="/termscons">
+                                <font size="3"><b>| Terms&Conditions </font></a>
                     
               </ls>&nbsp;
                 <ls>
