--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -1,31 +1,34 @@
 body {
     background-color: #F0F0F0;
-    margin-left: 20px;
     display: inline-block;
-    height: 100%;
-    padding: 25px 100px 75px 625px;
+    width: 40%;
 }
-form {
-    border: 1px solid gray;
-    padding: 25px;
-}
+
 form, div {
     display: block;
     clear: both;
-    width: 100%;
-    text-align: center;
     background-color: #B8B8B8;
 }
-label {
+label{
     float: left;
-    font: bold;
+    width: 150px;
+    text-align: right;
+    padding-right: 12px;
+    margin-top: 12px;
+    clear: left; 
 }
 input, select, textarea, #gender{
     float: right;
-    padding: 5px;
-    margin: 10px;
+    padding: 8px;
+    margin: 5px;
 }
-.center {
-    width: 30%;
-    padding: 10px;
+
+input, textarea, #gender{
+    width:18em;
+}
+#country{
+    width: 20em;
+}
+#register{
+    text-align: center;
 }
