--- a/app/app_core/templates/register.html
+++ b/app/app_core/templates/register.html
@@ -65,61 +65,20 @@
             <label>Username </label>
             <input type="text" name="username" id="username" placeholder="Choose your Username" required>
         </div>
+         <div>
+            <label>Password </label>
+            <input type="password" name="password" id="password" placeholder="Enter your Password" required>
+        </div>
+        <div>
+            <label>Confirm Password </label>
+            <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Type your password again." required>
+        </div>
         <div>
             <label>Contact Number </label>
             <input type="text" name="contact" id="contact" placeholder="Enter your Contact Number" size="10" required>
         </div>
         <div>
             <label>Date Of Birth</label>
-            <select name="day" required onchange="return wait_for_load(this, event, function() { editor_date_month_change(this, 'birthday_day','birthday_year'); });">
-                <option value="na">Day</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
-                <option value="11">11</option>
-                <option value="12">12</option>
-                <option value="13">13</option>
-                <option value="14">14</option>
-                <option value="15">15</option>
-                <option value="16">16</option>
-                <option value="17">17</option>
-                <option value="18">18</option>
-                <option value="19">19</option>
-                <option value="20">20</option>
-                <option value="21">21</option>
-                <option value="22">22</option>
-                <option value="23">23</option>
-                <option value="24">24</option>
-                <option value="25">25</option>
-                <option value="26">26</option>
-                <option value="27">27</option>
-                <option value="28">28</option>
-                <option value="29">29</option>
-                <option value="30">30</option>
-                <option value="31">31</option>
-            </select>
-            <select name="month" required>
-                <option value="na">Month</option>
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6">June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
-            </select>
             <select name="year" required>
                 <option value="na">Year</option>
                 <option value="2009">2009</option>
@@ -182,53 +141,75 @@
                 <option value="1952">1952</option>
                 <option value="1951">1951</option>
                 <option value="1950">1950</option>
-                <option value="1949">1949</option>
-                <option value="1948">1948</option>
-                <option value="1947">1947</option>
-                <option value="1946">1946</option>
-                <option value="1945">1945</option>
-                <option value="1944">1944</option>
-                <option value="1943">1943</option>
-                <option value="1928">1928</option>
-                <option value="1927">1927</option>
-                <option value="1926">1926</option>
-                <option value="1925">1925</option>
-                <option value="1924">1924</option>
-                <option value="1923">1923</option>
-                <option value="1922">1922</option>
-                <option value="1921">1921</option>
-                <option value="1920">1920</option>
-                <option value="1919">1919</option>
-                <option value="1918">1918</option>
-                <option value="1917">1917</option>
-                <option value="1916">1916</option>
-                <option value="1915">1915</option>
-                <option value="1914">1914</option>
-                <option value="1913">1913</option>
-                <option value="1912">1912</option>
-                <option value="1911">1911</option>
-                <option value="1910">1910</option>
-                <option value="1909">1909</option>
+            </select>
+            <select name="month" required>
+                <option value="na">Month</option>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6">June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
+            <select name="day" required onchange="return wait_for_load(this, event, function() { editor_date_month_change(this, 'birthday_day','birthday_year'); });">
+                <option value="na">Day</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                <option value="13">13</option>
+                <option value="14">14</option>
+                <option value="15">15</option>
+                <option value="16">16</option>
+                <option value="17">17</option>
+                <option value="18">18</option>
+                <option value="19">19</option>
+                <option value="20">20</option>
+                <option value="21">21</option>
+                <option value="22">22</option>
+                <option value="23">23</option>
+                <option value="24">24</option>
+                <option value="25">25</option>
+                <option value="26">26</option>
+                <option value="27">27</option>
+                <option value="28">28</option>
+                <option value="29">29</option>
+                <option value="30">30</option>
+                <option value="31">31</option>
             </select>
         </div>
         <div>
-            <label>Gender</label>
-        </div>
-        <div>
-            <label>Male </label>
-            <input type="radio" name="gender" value="radio" id="mgender">
-        </div>
-        <div>
-            <label>Female </label>
-            <input type="radio" name="gender" value="radio" id="fgender">
+            <label>Gender</label><br>
+            <select id="gender" required>
+                <option value="na">Gender</option>
+                <option value="Male">Male</option>
+                <option value="Female">female</option>
+            </select>
+            </div>
         </div>
         <div>
             <label>Current Address </label>
-            <input type="text" name="currentaddress" id="currentaddress" placeholder="Enter your Current Address" maxlength="140" required>
+            <input type="text" name="currentaddress" id="currentaddress" placeholder="Current Address line 1" maxlength="140" required>
+            <input type="text" name="currentaddress" id="currentaddress" placeholder="Current Address Line 2" maxlength="140" required>
         </div>
         <div>
             <label>Permanent Address </label>
-            <input type="text" name="permanentaddress" id="permanentaddress" placeholder="Enter your Permanent Address" maxlength="140" required>
+            <input type="text" name="permanentaddress" id="permanentaddress" placeholder="Permanent Address Line 1" maxlength="140" required>
+            <input type="text" name="permanentaddress" id="permanentaddress" placeholder="Permanent Address Line 2" maxlength="140" required>
         </div>
         <div>
             <label>Country <span class="required"></span></label>
@@ -297,28 +278,15 @@
             <label>Course </label>
             <input type="text" name="course" id="course" placeholder="Enter your Course" maxlength="140" required>
         </div>
-        <div>
-            <label>Password </label>
-            <input type="password" name="password" id="password" placeholder="Enter your Password" required>
-        </div>
-        <div>
-            <label>Confirm Password </label>
-            <input type="password" name="confirmpassword" id="confirmpassword" placeholder="Type your password again." required>
-        </div>
-        <div>
-            <label>How did you get to know KSC?</label>
-        </div>
-        <div>
-            <label>Friends</label>
-            <input type="checkbox" name="How did you know about KSC" value="checkbox" id="HowdidyouknowaboutKSC_0">
-        </div>
-        <div>
-            <label>Social Medias</label>
-            <input type="checkbox" name="How did you know about KSC" value="checkbox" id="HowdidyouknowaboutKSC_1">
-        </div>
-        <div>
-            <label>Google Search</label>
-            <input type="checkbox" name="How did you know about KSC" value="checkbox" id="HowdidyouknowaboutKSC_2">
+        <div class="question">
+            <div>
+                <label id="question">How did you get to know KSC?</label>
+            </div>
+            <div>
+                <input id="question" type="radio" value="radio">Friends<br>
+                <input id="question" type="radio" value="radio">Social Media<br>
+                <input id="question" type="radio" value="radio">Google Search<br>
+            </div>
         </div>
         <div class="g-recaptcha" data-sitekey="6Le-wvkSAAAAAPBMRTvw0Q4Muexq9bi0DJwx_mJ-">
             <div>
@@ -331,7 +299,7 @@
         <div>
             <p>I have read and agree to the <a target="_blank" href="£" rel="nofollow">Terms and conditions</a></p>
         </div>
-        <input type="submit" value="Submit">
+        <div><input class="submit" type="submit" value="Submit"></div>
     </form>
 </body>
 <footer align="center">
