Rim|#42|armenments of gallery and contact us

--- a/app/app_core/templates/contactus.html
+++ b/app/app_core/templates/contactus.html
@@ -34,10 +34,23 @@
     </div>
 </header>
 </div>
-
 <body>
+<div id="form-main" align="right">
+<table>
+<tr>
+ <div id="col" >
+ <b><h1 align="center">Contact Us</h1></b>
+<td><p>Office Address:</p> 
+<p><p>ThoughtWorks Technologies (India) Pvt Ltd.</p> 
+<p>3rd Floor, Apurupa Silpi,</p> 
+<p>Beside H.P. Petrol Bunk (KFC Building),</p> 
+<p>Gachibowli, Hyderabad - 500032, India</p>
 
-<div id="form-main">
+<p>Telephone: 04012345679</p>
+<p>Fax:</p>
+</div>
+</tr>
+<tr>
   <div id="form-div">
     <form class="form" id="form1">
       
@@ -60,6 +73,8 @@
       </div>
     </form>
   </div>
+  </tr>
+</table></div>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -69,23 +84,6 @@
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <div id="col" align="center">
-<h2>Office Address:</h2> 
-<h2>ThoughtWorks Technologies (India) Pvt Ltd. 3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk (KFC Building), Gachibowli, Hyderabad - 500032, India</h2>
-
-<h2>Telephone:</h2>
-<h2> 04012345679</h2>
-
-<h2>Fax:</h2>
-</div>
 </body>
     <footer align="center">
     <div id="wrap">
