Joelle, Yashna |#59| Part os CSS

--- a/app/app_core/templates/register.html
+++ b/app/app_core/templates/register.html
@@ -35,7 +35,6 @@
             <li><a href="/forum">Forum</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/login">Login</a></li>
-            <li><a href="/register">Registration</a></li>
         </ul>
     </div>
 </header>
@@ -299,7 +298,7 @@
         <div>
             <p>I have read and agree to the <a target="_blank" href="£" rel="nofollow">Terms and conditions</a></p>
         </div>
-        <div><input class="submit" type="submit" value="Submit"></div>
+        <input class="submit" type="submit" value="Submit">
     </form>
 </body>
 <footer align="center">
