Chygoz, Barrack | Modified aboutus

--- a/app/app_core/templates/home.html
+++ b/app/app_core/templates/home.html
@@ -96,9 +96,11 @@
         </div>
     </div>
     </div>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
+    <p>&nbsp;</p>
     </body>
     <footer align="center">
-    <div id="wrap">
     <div id="right">
     <ul>
         <ls>
@@ -111,7 +113,7 @@
                     <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
                 </a>
     </div>
-    <div id="main" align="left">
+    <div id="main">
     <ls>
                     <a id="contactus" href="/contactus">
                         <font size="3"><b> Contact Us </b></font>
