Joelle, Yashna |#59| part of CSS

--- a/app/app_core/templates/register.html
+++ b/app/app_core/templates/register.html
@@ -2,24 +2,14 @@
 <html>
 
 <head>
-    <title>KSC</title>
+    <title>Events</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="/static/slippry/dist/slippry.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-    <link rel="stylesheet" href="/static/css/home_style.css">
-    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-    <script src="/static/sliderengine/jquery.js"></script>
-    <script src="/static/sliderengine/amazingslider.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/sliderengine/amazingslider-1.css">
-    <script src="/static/sliderengine/initslider-1.js"></script>
-</head>
+    <link type="text/css" rel="stylesheet" href="/static/css/home_style.css">
+  </head>
 <header>
-    <div id="langbar" align="right">
-        <select>
+    <div align="right">
+        <select id="langbar">
             <option>Language</option>
             <option value="English">English</option>
             <option value="French">French</option>
