Charles |#Quick Fix| Adding a temporary link for the forum navigation.

--- a/app/app_core/templates/forum.html
+++ b/app/app_core/templates/forum.html
@@ -4,6 +4,9 @@
 	<title>KSC Forum</title>
 </head>
 <body>
-
+	<center>
+	<p>Work in progress...</p>
+	<p>Will plug in the <a href="https://forums.flaskbb.org/">Flaskbb Forum Module</a></p>
+	</center>
 </body>
 </html>
