--- a/app/static/css/register.css
+++ b/app/static/css/register.css
@@ -1,14 +1,15 @@
 body {
-    background-color: #F0F0F0;
-    display: inline-block;   
+    background-color: #E0E0E0;
+    display: inline-block; 
+    font-family: 'Nunito', sans-serif;  
 }
 #register{
-    padding: 25px 25px 25px 25px;
-    margin: 50px 600px 50px 600px;
-    width: 25%;
+    padding: 50px 50px 50px 50px;
+    margin: 40px 500px 40px 500px;
+    width: 50%;
 }
 #register{
-    display: block;
+    display:inline-block;
     clear: both;
     background-color: #D8D8D8;
 }
@@ -18,16 +19,22 @@ div{
 }
 label{
     float: left;
-    width: 150px;
+    width: 100px;
     text-align: right;
     padding-right: 12px;
     margin-top: 12px;
     clear: left; 
+    display: block;
+    margin-bottom: 8px;
 }
 input, select, textarea{
     float: right;
     padding: 8px;
-    margin: 5px;
+    margin: 2 8px 16px 2;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
 }
 input, textarea{
     width:18em;
@@ -55,8 +62,46 @@ input, textarea{
 select{
     line-height:30px;
     height: 30px;
-    background: #B8B8B8;
+    background: #B8B8B8;  
 }
 h1{
-    font-size: 25px;
+      font-size:20px;
+      padding: 15px 5px 15px 5px;
+      color: #FFF;
+      background-color: #4bc970;
+      font-size: 18px;
+      text-align: center;
+      font-style: normal;
+      border-radius: 5px;
+      width: 100%;
+      border: 1px solid #3ac162;
+      border-width: 1px 1px 3px;
+      box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+      margin-bottom: 10px;
+      margin: 0 0 30px 0;
 }
+form{
+    max-width: 350px;
+    margin: 40px auto;
+    padding: 20px 30px;
+    background: #f4f7f8;
+    border-radius: 10px;
+}
+button {
+  padding: 19px 39px 18px 39px auto;
+  color: #FFF;
+  background-color: #4bc970;
+  font-size: 18px;
+  text-align: center;
+  font-style: normal;
+  border-radius: 5px;
+  width: 100%;
+  border: 1px solid #3ac162;
+  border-width: 1px 1px 3px;
+  box-shadow: 0 -1px 0 rgba(255,255,255,0.1) inset;
+  margin-bottom: 10px;
+}
+fieldset {
+  margin-bottom: 30px;
+  border: none;
+  }
