Charles |#Refactoring| Moving header and footer code to separate files.

--- a/app/app_core/templates/forum.html
+++ b/app/app_core/templates/forum.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<title>KSC Forum</title>
+	{% include 'header.html' %}
 </head>
 <body>
 	<center>
 	<p>Work in progress...</p>
 	<p>Will plug in the <a href="https://forums.flaskbb.org/">Flaskbb Forum Module</a></p>
 	</center>
+ <p>&nbsp;</p>
+    {% include 'footer.html' %}
 </body>
 </html>
