--- a/app/app_core/templates/login.html
+++ b/app/app_core/templates/login.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html >
   <head>
     <meta charset="UTF-8">
     <title>Login Form</title>
-
-    
     <link rel="stylesheet" href="static/css/reset.css">
     <link rel="stylesheet" href="static/css/style.css">
-  <script src="/static/js/prefixfree.min.js"></script>
-
-<link rel="stylesheet" href="/static/css/home_style.css">
-
-
-</head>
-<header>
-
+    <script src="/static/js/prefixfree.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+  </head>
+  <header>
     <div id="langbar" align="right">
         <select>
             <option>Language</option>
@@ -33,101 +26,51 @@
              <li><a href="/register">Registration</a></li>
         </ul> 
     </div>    
-</header>
-    </div>
-    
-  </head>
+  </header>
 
-  <body>
+<body>
   <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-    <div id="login">
-  <form id="login_form">
-    <div class="field_container">
-      <input type="text" placeholder="Username">
-    </div>
-    
-    <div class="field_container">
-      <input type="Password" placeholder="Password">
-      <button id="sign_in_button">
-        <span class="button_text">Sign In</span>
-      </button>
-    </div>
-    
-    <div id="sign_in_options" class="field_container">
-        <div id="sign_in_alternatives_container">
-          <span id="google_sign_in_option">or you can <a href="#" id="google_sign_in" class="login_link">sign in with Google</a></span>
-          <span id="password_sign_in_option">or you can <a href="#" id="password_sign_in" class="login_link">sign in using a password</a></span>
-        </div>
-        <div id="remember_me_container">
-          <input name="user[remember_me]" type="hidden" value="0"><input id="user_remember_me" name="user[remember_me]" type="checkbox" value="1">
-          <label class="login_link" for="user_remember_me" id="remember_me_label">stay signed in</label>
-        </div>
-        <div class="clearfix"></div>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <div id="login" align="center">
+    <form id="login_form">
+      <div class="field_container">
+        <input type="text" placeholder="Username">
+      </div>
+      
+      <div class="field_container">
+        <input type="Password" placeholder="Password">
+        <button id="sign_in_button">
+          <span class="button_text">Sign In</span>
+        </button>
+      </div>
+      
+      <div id="sign_in_options" class="field_container">
+          <div id="sign_in_alternatives_container">
+            <span id="google_sign_in_option">or you can <a href="#" id="google_sign_in" class="login_link">sign in with Google</a></span>
+            <span id="password_sign_in_option">or you can <a href="#" id="password_sign_in" class="login_link">sign in using a password</a></span>
+          </div>
+          <div id="remember_me_container">
+            <input name="user[remember_me]" type="hidden" value="0"><input id="user_remember_me" name="user[remember_me]" type="checkbox" value="1">
+            <label class="login_link" for="user_remember_me" id="remember_me_label">stay signed in</label>
+          </div>
+          <div class="clearfix"></div>
       </div>
 
-  
-  <div id="dont_have_an_account">
-    <h2>
-      Need to <a href="/register" class="login_link">sign up</a> for an account
-      or <a href="/reset" id="forgot_password_link" class="login_link">reset</a> your password?
-    </h2>
+    
+    <div id="dont_have_an_account">
+      <h2>
+        Need to <a href="/register" class="login_link">sign up</a> for an account
+        or <a href="/reset" id="forgot_password_link" class="login_link">reset</a> your password?
+      </h2>
+    </div>
   </div>
-</div>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>   
- </body>
-   <footer align="center">
-        <ls>
-            <div align="right">
-                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-                </a>
-                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-                </a>
-            </div>
-            <div align="justify">
-                <ls>
-                    <a id="contactus" href="/contactus">
-                        <font size="3"><b> Contact Us </b></font>
-                    </a>
-                   
-                </ls>&nbsp;
-                <ls>
-                    <a id="partners" href="/partners">
-                        <font size="3"><b>| Our Partners  </b></font>
-                    </a>
-                    
-                </ls>&nbsp;
-                <ls>
-                    <a id="termscons" href="/termscons">
-                        <font size="3"><b>| Terms&Conditions </font></a>
-                    
-              </ls>&nbsp;
-                <ls>
-                    <a id="privacy" href="/privacy">
-                        <font size="3"><b>| Privacy Policy </font></a>
-                </ls>&nbsp;
-                    &nbsp;
-        <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-        </div>
-    </footer>
+
+  <p>&nbsp;</p>   
+  {% include 'footer.html' %}  
+</body>
 </html>
