--- a/app/app_core/templates/gallery.html
+++ b/app/app_core/templates/gallery.html
@@ -1,88 +1,42 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <title>KSC GALLERY</title>
     <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width">
-<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="/static/slippry/dist/slippry.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
-<link rel="stylesheet" href="/static/css/home_style.css">
-
-<link rel="stylesheet" href="/static/slippry/dist/slippry.css">
-<link rel="stylesheet" href="/static/css/home.css" type="text/css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
-
-   
+    <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="/static/slippry/dist/slippry.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
+    <link rel="stylesheet" href="/static/css/home_style.css">
+    <link rel="stylesheet" href="/static/slippry/dist/slippry.css">
+    <link rel="stylesheet" href="/static/css/home.css" type="text/css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen" />
     <script src="/static/galleryengine/jquery.js"></script>
     <script src="/static/galleryengine/amazingslider.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/galleryengine/amazingslider-1.css">
     <script src="/static/galleryengine/initslider-1.js"></script>
-   
-    
 </head>
-<header>
+{% include 'header.html' %}
 
-    <div id="langbar" align="right">
-        <select>
-            <option>Language</option>
-            <option value="English">English</option>
-            <option value="French">French</option>
-        </select>
-    </div>
-
-
-
-    <div id="menu" class="clear">
-
-
-
-        <a href="/"><div class="logo"><img height="4%" src="/static/images/ksclogo3.png" alt="logo"></div></a>
-
-<!--  <div class="box">
-  <div class="container-4">
-    <input type="search" id="search" placeholder="Search..." />
-    <button class="icon"><i class="fa fa-search"></i></button>
-  </div>
-</div>
- -->
-        <ul align="center" id="bar">
-            <li><a href="/aboutus">About Us</a></li>
-            <li><a href="/gallery">Gallery</a></li>
-            <li><a href="/forum">Forum</a></li>
-            <li><a href="/events">Events</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/register">Registration</a></li>
-        </ul>
-
-    </div>
-
-
-    
-</header>
-
-    </div>
 <body>
-    
-    
     <div id="amazingslider-wrapper-1" style="display:block;position:relative;max-width:900px;margin:0px auto 102px;">
         <div id="amazingslider-1" style="display:block;position:relative;margin:0 auto;">
             <ul class="amazingslider-slides" style="display:none;">
-                <li><img src="/static/galleryimages/1.jpg" alt="STUDENTS"  title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/1.jpg" alt="STUDENTS" title="STUDENTS" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/2.jpg" alt="TRAINER TEAM"  title="TRAINER TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/2.jpg" alt="TRAINER TEAM" title="TRAINER TEAM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/3.jpg" alt="DEV. + UI/UX"  title="DEV. + UI/UX" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/3.jpg" alt="DEV. + UI/UX" title="DEV. + UI/UX" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/4.jpg" alt="SESSION"  title="SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/4.jpg" alt="SESSION" title="SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/5.jpg" alt="BRAIN STORM"  title="BRAIN STORM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/5.jpg" alt="BRAIN STORM" title="BRAIN STORM" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/6.jpg" alt="DEV. SESSION"  title="DEV. SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/6.jpg" alt="DEV. SESSION" title="DEV. SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
-                <li><img src="/static/galleryimages/7.jpg" alt="JOINT SESSION"  title="JOINT SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
+                <li><img src="/static/galleryimages/7.jpg" alt="JOINT SESSION" title="JOINT SESSION" data-description="KNOWLEDGE SHARING CAMPAIGN" />
                 </li>
             </ul>
             <ul class="amazingslider-thumbnails" style="display:none;">
@@ -96,47 +50,7 @@
             </ul>
         </div>
     </div>
+    {% include 'footer.html' %}
 </body>
-<footer align="center">
-    <div id="wrap">
-    <div id="right">
-    <ul>
-        <ls>
-            <div align="right">
-                <a href="https://www.facebook.com/Knowledge-Sharing-Campaign-2017193451752977/timeline/?ref=br_tf" target="_blank">
-                    <img alt="Go to KSC facebook page" align="right" border="0" height="40" src="/static/images/facebook1.png" width="40">
-                </a>
-                <a href="https://accounts.google.com/ServiceLogin?service=oz&passive=1209600&continue=https://plus.google.com/?gpsrc%3Dgplp0#identifier" target="_blank"><img alt="Go to KSC google+ page" align="right" border="0" height="40" src="/static/images/google1.png" width="40"></a>
-                <a href="https://twitter.com/hashtag/KnowledgeSharingCampaign?src=hash&lang=en" target="_blank">
-                    <img alt="Go to KSC facebook page" border="0" height="40" src="/static/images/twitter1.png" width="40">
-                </a>
-    </div>
-    <div id="main" align="left">
-    <ls>
-                    <a id="contactus" href="/contactus">
-                        <font size="3"><b> Contact Us </b></font>
-                    </a>
-                   
-                </ls>&nbsp;
-                <ls>
-                    <a id="partners" href="/partners">
-                        <font size="3"><b>| Our Partners  </b></font>
-                    </a>
-                    
-                </ls>&nbsp;
-                <ls>
-                    <a id="termscons" href="/termscons">
-                        <font size="3"><b>| Terms&Conditions </font></a>
-                    
-              </ls>&nbsp;
-                <ls>
-                    <a id="privacy" href="/privacy">
-                        <font size="3"><b>| Privacy Policy </font></a>
-                </ls>&nbsp;
-                    &nbsp;
-    <ls><a href=""><b>| Copyright &copy; 2015 &middot; KnowledgeSharingCampaign &middot; </a></ls>
-            </div>
-            </div>
-    </footer>
-    </body>
+
 </html>
